<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/light_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:columnCount="3"
        android:rowCount="3"
        android:useDefaultMargins="true">

        <Button
            style="@style/LightButton"
            android:onClick="onLightButtonClick" />

        <Button
            style="@style/LightButton"
            android:onClick="onLightButtonClick" />

        <Button
            style="@style/LightButton"
            android:onClick="onLightButtonClick" />

        <Button
            style="@style/LightButton"
            android:onClick="onLightButtonClick" />

        <Button
            style="@style/LightButton"
            android:onClick="onLightButtonClick" />

        <Button
            style="@style/LightButton"
            android:onClick="onLightButtonClick" />

        <Button
            style="@style/LightButton"
            android:onClick="onLightButtonClick" />

        <Button
            style="@style/LightButton"
            android:onClick="onLightButtonClick" />

        <Button
            style="@style/LightButton"
            android:onClick="onLightButtonClick" />

    </GridLayout>

    <Button
        android:id="@+id/new_game_button"
        style="@style/GameOptionButton"
        android:onClick="onNewGameClick"
        android:text="@string/new_game_button_label" />

    <Button
        android:id="@+id/help_button"
        style="@style/GameOptionButton"
        android:onClick="onHelpClick"
        android:text="@string/help_button_label" />

    <Button
        android:id="@+id/change_color_button"
        style="@style/GameOptionButton"
        android:onClick="onChangeColorClick"
        android:text="@string/color_button_label" />

</LinearLayout>